# sail-plan

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_HANDOFF.md  LICENSE  Makefile  README.md  boat_config.toml  boat_config.toml.example  pyproject.toml  requirements.txt  sail_plan_app.py
docs/: DEPLOYMENT.md  SCHEMA.md
